<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_pokemon"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/weight"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/heightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="2"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/height"
        app:layout_constraintTop_toBottomOf="@id/height"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_pokemon"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/weightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="15.2"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/weight"
        app:layout_constraintTop_toBottomOf="@id/weight"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/firstLinear"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/weightTextView"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male_pokemon"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/height"
        app:layout_constraintTop_toBottomOf="@id/firstLinear"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/maleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="87.5%"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/male"
        app:layout_constraintTop_toBottomOf="@id/male"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female_pokemon"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/weight"
        app:layout_constraintTop_toBottomOf="@id/firstLinear"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/femaleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="12.5%"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/female"
        app:layout_constraintTop_toBottomOf="@id/female"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/secondLinear"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/maleTextView"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/xdescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        tools:text="Bulbasaur can be seen napping in bright sunlight. There is a seed on its back. By soaking up the sun's rays, the seed grows progressively larger."
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/secondLinear"/>
</androidx.constraintlayout.widget.ConstraintLayout>