<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/teal_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/idTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="#001"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@id/typeTextView"
                    app:layout_constraintEnd_toEndOf="@id/typeTextView"
                    app:layout_constraintTop_toTopOf="@id/nameTextView"
                    app:layout_constraintBottom_toBottomOf="@id/nameTextView"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    tools:text="Bulbasaur"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/typeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_pokemon"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/imageView"
                    app:layout_constraintTop_toBottomOf="@id/nameTextView" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/firstTypeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/item_pokemon_space"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    tools:text="Grass"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/imageView"
                    app:layout_constraintTop_toBottomOf="@id/typeTextView" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/secondTypeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/item_pokemon_space"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    tools:text="Grass"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/imageView"
                    app:layout_constraintTop_toBottomOf="@id/firstTypeTextView" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/thirdTypeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/item_pokemon_space"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    tools:text="Grass"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/imageView"
                    app:layout_constraintTop_toBottomOf="@id/secondTypeTextView"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/imageView"
                    android:background="@drawable/ic_baseline_arrow_back_ios_new_24"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageView"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    tools:src="@drawable/item_pokemon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nameTextView"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/favoriteImageView"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    app:layout_constraintStart_toStartOf="@id/classTextView"
                    app:layout_constraintEnd_toEndOf="@id/classTextView"
                    app:layout_constraintTop_toTopOf="@id/nameTextView"
                    app:layout_constraintBottom_toBottomOf="@id/nameTextView"
                    android:src="@drawable/ic_baseline_donut_large_24"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/classTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_pokemon"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@id/imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/typeTextView"
                    app:layout_constraintBottom_toBottomOf="@id/typeTextView"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/categoryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/item_pokemon_space"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    tools:text="Seed"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/classTextView"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.MaterialToolbar>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_first_table_item" />
                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_second_table_item" />
                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_third_table_item" />
                </com.google.android.material.tabs.TabLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
